Move app changes and error fixes into separate pages to make rest shorter

--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -1,11 +1,7 @@
-##### original (it was written to deploy to Fly.io) #####
-#ip=$(grep fly-local-6pn /etc/hosts | cut -f 1)
-#export RELEASE_DISTRIBUTION=name
-#export RELEASE_NODE=$FLY_APP_NAME@$ip
-#export LIVE_BEATS_SERVER_IP=$ip
-##### modified (for local/AWS) #####
+# modified for AWS (no fly-local-6pn here)
 ip=$(hostname -i)
 export RELEASE_DISTRIBUTION=name
-export RELEASE_NODE=app@$ip
+export RELEASE_NODE=live-beats@$ip
 export LIVE_BEATS_SERVER_IP=$ip
-echo "The LIVE_BEATS_SERVER_IP is $LIVE_BEATS_SERVER_IP"
+
+#echo "This container is: $RELEASE_NODE"
